--- a/index.html
+++ b/index.html
@@ -24,7 +24,58 @@
         </div>
       </div>
     </header>
-    <div>Search</div>
-    <main>Content</main>
+
+    <main>
+      <section class="search">
+        <div class="container">
+          <div class="search-box">
+            <input type="text" />
+            <button class="btn btn-primary search-btn">
+              <img
+                class="search-btn__icon"
+                src="./image/search.svg"
+                alt="search"
+              />
+              <span class="search-btn__text">Найти</span>
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="content">
+        <div class="container">
+          <div class="content-box">
+            <div class="content-main">
+              <h2 class="content-main__title">Рекомендации для вас</h2>
+              <div class="content-main__list">
+                <div class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+
+                  <strong class="content-main__list-item--price">170 ₽</strong>
+                  <span class="content-main__list-item--desc"
+                    >Казань, р-н Вахитовский</span
+                  >
+                  <span
+                    class="content-main__list-item--desc"
+                    content-main__list-item--desc
+                    >10 июля 11:39</span
+                  >
+                </div>
+                <div class="content-main__list-item">1</div>
+                <div class="content-main__list-item">1</div>
+                <div class="content-main__list-item">1</div>
+                <div class="content-main__list-item">1</div>
+                <div class="content-main__list-item">1</div>
+              </div>
+            </div>
+            <div class="content-side">2</div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
