--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="content-main">
               <h2 class="content-main__title">Рекомендации для вас</h2>
               <div class="content-main__list">
-                <div class="content-main__list-item">
+                <a href="#" class="content-main__list-item">
                   <div class="content-main__list-item--img">
                     <img src="./image/card-img.png" alt="card-img" />
                   </div>
@@ -59,20 +59,126 @@
                   <span class="content-main__list-item--desc"
                     >Казань, р-н Вахитовский</span
                   >
-                  <span
-                    class="content-main__list-item--desc"
-                    content-main__list-item--desc
-                    >10 июля 11:39</span
+                  <div class="content-main__list-item--desc-box">
+                    <span
+                      class="content-main__list-item--desc"
+                      content-main__list-item--desc
+                      >10 июля 11:39</span
+                    >
+                  </div>
+                </a>
+                <a href="#" class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+
+                  <strong class="content-main__list-item--price">170 ₽</strong>
+                  <span class="content-main__list-item--desc"
+                    >Казань, р-н Вахитовский</span
                   >
-                </div>
-                <div class="content-main__list-item">1</div>
-                <div class="content-main__list-item">1</div>
-                <div class="content-main__list-item">1</div>
-                <div class="content-main__list-item">1</div>
-                <div class="content-main__list-item">1</div>
+                  <div class="content-main__list-item--desc-box">
+                    <span
+                      class="content-main__list-item--desc"
+                      content-main__list-item--desc
+                      >10 июля 11:39</span
+                    >
+                  </div> </a
+                ><a href="#" class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+
+                  <strong class="content-main__list-item--price">170 ₽</strong>
+                  <span class="content-main__list-item--desc"
+                    >Казань, р-н Вахитовский</span
+                  >
+                  <div class="content-main__list-item--desc-box">
+                    <span
+                      class="content-main__list-item--desc"
+                      content-main__list-item--desc
+                      >10 июля 11:39</span
+                    >
+                  </div> </a
+                ><a href="#" class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+
+                  <strong class="content-main__list-item--price">170 ₽</strong>
+                  <span class="content-main__list-item--desc"
+                    >Казань, р-н Вахитовский</span
+                  >
+                  <div class="content-main__list-item--desc-box">
+                    <span
+                      class="content-main__list-item--desc"
+                      content-main__list-item--desc
+                      >10 июля 11:39</span
+                    >
+                  </div> </a
+                ><a href="#" class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+
+                  <strong class="content-main__list-item--price">170 ₽</strong>
+                  <span class="content-main__list-item--desc"
+                    >Казань, р-н Вахитовский</span
+                  >
+                  <div class="content-main__list-item--desc-box">
+                    <span
+                      class="content-main__list-item--desc"
+                      content-main__list-item--desc
+                      >10 июля 11:39</span
+                    >
+                  </div> </a
+                ><a href="#" class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+
+                  <strong class="content-main__list-item--price">170 ₽</strong>
+                  <span class="content-main__list-item--desc"
+                    >Казань, р-н Вахитовский</span
+                  >
+                  <div class="content-main__list-item--desc-box">
+                    <span
+                      class="content-main__list-item--desc"
+                      content-main__list-item--desc
+                      >10 июля 11:39</span
+                    >
+                  </div>
+                </a>
               </div>
             </div>
-            <div class="content-side">2</div>
+            <div class="content-side">
+              <h3 class="content-said__title">Сервисы и услуги</h3>
+              <div class="content-side__box">
+                <div class="content-side__list">
+                  <div class="content-side__list--item">
+                    <img class="content-side__list--item--img" src="" alt="" />
+                    <h5 class="content-side__list--item--title"></h5>
+                    <p class="content-side__list--item--text"></p>
+                  </div>
+                  <div class="content-side__list--item"></div>
+                  <div class="content-side__list--item"></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
